# Matrix

__MATRIX_EXAMPLE_PROJECT/: CMakeLists.txt  CMakeSettings.json
__MATRIX_EXAMPLE_PROJECT/doc/: gcd_algorithm_explained.md
__MATRIX_EXAMPLE_PROJECT/include/: CMakeLists.txt  configuration.hpp  main.hpp
__MATRIX_EXAMPLE_PROJECT/libs/: CMakeLists.txt
__MATRIX_EXAMPLE_PROJECT/libs/Matrix_Library/: CMakeLists.txt
__MATRIX_EXAMPLE_PROJECT/libs/Matrix_Library/include/: Matrix_Non_Dynamic_2-0_Library.hpp
__MATRIX_EXAMPLE_PROJECT/libs/Matrix_Library/src/: CMakeLists.txt  Matrix_Non_Dynamic_2-0_Library.cpp  Matrix_Non_Dynamic_Library.c
__MATRIX_EXAMPLE_PROJECT/other/: MyPreLinkCommands01.sh
__MATRIX_EXAMPLE_PROJECT/src/: CMakeLists.txt  main.cpp
